--- a/Dockerfile.worker
+++ b/Dockerfile.worker
@@ -1,4 +1,4 @@
-FROM golang:1.20 as build
+FROM golang:alpine as build
 WORKDIR /src
 
 COPY cmd/ cmd
@@ -6,10 +6,11 @@ COPY internal/ internal
 COPY go.mod go.mod
 COPY go.sum go.sum
 
-RUN go build -o server cmd/worker/main.go
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o server cmd/worker/main.go
 
-FROM ubuntu:22.04 as production
-
+FROM alpine:3.18 as production
 WORKDIR /srv
+
+RUN apk add --no-cache bash
 
 COPY --from=build /src/server server
