Migrate to alpine node image

--- a/js_worker/Dockerfile
+++ b/js_worker/Dockerfile
@@ -1,8 +1,17 @@
-FROM node:12.18.1
-WORKDIR /srv
-COPY js_worker/package.json /srv
-COPY js_worker/yarn.lock /srv
-COPY protos /protos
-COPY js_worker/src/ /srv/src
-COPY js_worker/server /srv
+FROM node:12.18.1 as build
+WORKDIR /build
+COPY js_worker/package.json /build
+COPY js_worker/yarn.lock /build
+COPY js_worker/src/ /build/src
+COPY js_worker/server /build
 RUN yarn && yarn build
+
+FROM node:alpine as production
+WORKDIR /srv
+
+RUN apk add --no-cache bash
+
+COPY --from=build /build/node_modules /srv/node_modules
+COPY --from=build /build/dist /srv/dist
+COPY protos /protos
+COPY js_worker/server /srv
