Compile js worker to a single bundle

--- a/js_worker/Dockerfile
+++ b/js_worker/Dockerfile
@@ -2,6 +2,7 @@ FROM node:latest as build
 WORKDIR /build
 COPY js_worker/package.json /build
 COPY js_worker/yarn.lock /build
+COPY js_worker/tsconfig.json /build
 COPY js_worker/src/ /build/src
 COPY js_worker/server /build
 RUN yarn && yarn build
@@ -11,7 +12,6 @@ WORKDIR /srv
 
 RUN apk add --no-cache bash
 
-COPY --from=build /build/node_modules /srv/node_modules
 COPY --from=build /build/dist /srv/dist
 COPY --from=build /build/package.json /srv/package.json
 COPY protos /protos
