--- a/js_worker/package.json
+++ b/js_worker/package.json
@@ -2,10 +2,9 @@
   "name": "js_worker",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "license": "MIT",
   "scripts": {
-    "build": "esbuild src/index.ts --outdir=dist",
+    "build": "tsc --build . && esbuild tsc/index.js --bundle --platform=node --format=cjs --outdir=dist",
     "clean": "rm -rf ./dist"
   },
   "devDependencies": {
@@ -15,6 +14,7 @@
     "@grpc/grpc-js": "^1.8.14",
     "@grpc/proto-loader": "^0.7.7",
     "esbuild": "^0.17.19",
-    "esm": "^3.2.25"
+    "esm": "^3.2.25",
+    "tsc": "^2.0.4"
   }
 }
